test/functions/ferguson/ref-pair/ref-return-proc-iter2.good
ref-return-proc-iter2.chpl:14: error: ambiguous call 'foo(1)'
ref-return-proc-iter2.chpl:3: note: candidates are: foo(x: int)
ref-return-proc-iter2.chpl:9: note:                 foo(x: int)
